--- a/index.html
+++ b/index.html
@@ -15,32 +15,66 @@
     <section id="proyectos">
         <h2>Proyectos</h2>
         <div class="proyecto">
-            <h3>Proyecto 1</h3>
-            <p>Descripción breve del proyecto.</p>
+            <h3>Detector de Colores con OpenCV</h3>
+            <p>Desarrollé un sistema de visión artificial utilizando OpenCV para detectar y clasificar colores en tiempo real a partir de una cámara web. Este proyecto permite identificar objetos de diferentes colores. Es útil en aplicaciones de automatización, como el control de robots o la identificación de objetos en entornos industriales.</p>
             <a href="#">Ver proyecto</a>
         </div>
-        <!-- Repite para más proyectos -->
+        <div class="proyecto">
+            <h3>Detector de rostros con OpenCV y Haar carcase</h3>
+            <p>Este proyecto utiliza técnicas de visión por computadora con OpenCV y Haar Cascades para detectar rostros en tiempo real. Al capturar imágenes desde una cámara web, el sistema localiza las caras de las personas en el campo visual y puede activar acciones o mostrar información adicional, lo que es ideal para aplicaciones de seguridad o interacción humana.</p>
+            <a href="#">Ver proyecto</a>
+        </div>
+        <div class="proyecto">
+            <h3>Teclado Virtual</h3>
+            <p>Desarrollé un teclado virtual utilizando Python y openCV, permitiendo a los usuarios interactuar con su computadora sin la necesidad de un teclado físico. El sistema permite ingresar texto y realizar tareas comunes a través de un diseño intuitivo, ideal para personas con discapacidades físicas o para dispositivos sin teclado físico.</p>
+            <a href="#">Ver proyecto</a>
+        </div>
+        <div class="proyecto">
+            <h3>Página web</h3>
+            <p>Creé una página web utilizando HTML, JavaScript, Python, PHP y CSS, centrada en ofrecer información clara y accesible. El proyecto incluye una estructura básica de navegación, secciones de contenido y un diseño atractivo y responsivo para adaptarse a diferentes dispositivos. Es ideal para una presentación personal o una pequeña empresa.</p>
+            <a href="#">Ver proyecto</a>
+        </div>
+        <div class="proyecto">
+            <h3>chatbot con IA</h3>
+            <p>Desarrollé un chatbot simple con Python utilizando la librería tensorflow y una base de datos en JSON para responder preguntas frecuentes en tiempo real. Este chatbot es capaz de mejorar sus respuestas a medida que interactúa con los usuarios. Es una solución ideal para soporte al cliente o para automatizar procesos de atención al usuario en sitios web.</p>
+            <a href="#">Ver proyecto</a>
+        </div>
     </section>
 
     <section id="habilidades">
         <h2>Habilidades</h2>
         <ul>
+            <li>Python</li>
             <li>HTML</li>
+            <li>Flask</li>
             <li>CSS</li>
-            <li>JavaScript</li>
-            <!-- Añade más habilidades -->
+            <li>Git</li>
+            <li>Docker</li>
+            <li>Machine Learning</li>
+            <li>Fine-Tuning</li>
+            <li>SQL</li>
         </ul>
     </section>
 
     <section id="sobre-mi">
         <h2>Sobre mí</h2>
-        <p>Una breve descripción sobre ti, tu experiencia y tus objetivos.</p>
+        <p>¡Hola! Soy Emilio García M., un apasionado desarrollador de software con experiencia en programación, automatización, desarrollo web e inteligencia artificial. Mi objetivo es crear soluciones tecnológicas innovadoras que optimicen procesos, resuelvan problemas complejos y mejoren la experiencia del usuario.</p>
+
+        <p>Con un enfoque principal en Python, he liderado proyectos tanto en el ámbito del backend como del frontend, siempre buscando aprender y aplicar nuevas tecnologías. Además, tengo experiencia en el desarrollo de sistemas embebidos, trabajando con dispositivos como Raspberry Pi, ESP32 y Arduino.</p>
+
+        <p>Me apasiona la robótica y la inteligencia artificial, y he tenido la oportunidad de desarrollar proyectos en estas áreas, como chatbots con IA y programas de visión artificial. Disfruto creando soluciones que tengan un impacto real en la vida de las personas.</p>
+
+        <p>Además de mis habilidades técnicas, destaco por mi capacidad de resolución de problemas, trabajo en equipo y adaptabilidad ante nuevos retos. Me encanta colaborar en proyectos de código abierto y contribuir a la comunidad tecnológica.</p>
+
     </section>
 
     <section id="contacto">
         <h2>Contacto</h2>
         <p>Puedes contactarme en <a href="Gmail:emilio34hd@gmail.com">emilio34hd@gmail.com</a>.</p>
     </section>
+
+    <meta name="description" content="Portfolio de Emilio García Mondragón, desarrollador de software con experiencia en programación, inteligencia artificial y automatización.">
+    <meta name="keywords" content="desarrollador de software, python, inteligencia artificial, machine learning, visión artificial, chatbot, Flask, HTML, CSS">
 
     <footer>
         <p>&copy; 2025 Emilio García Mondragón</p>
