Links to proyects

--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
         <div class="proyecto">
             <h3>Detector de Colores con OpenCV</h3>
             <p>Desarrollé un sistema de visión artificial utilizando OpenCV para detectar y clasificar colores en tiempo real a partir de una cámara web. Este proyecto permite identificar objetos de diferentes colores. Es útil en aplicaciones de automatización, como el control de robots o la identificación de objetos en entornos industriales.</p>
-            <a href="#">Ver proyecto</a>
+            <a href="https://github.com/emdraw/Python_ColorOpenCV">Ver proyecto</a>
         </div>
         <div class="proyecto">
             <h3>Detector de rostros con OpenCV y Haar carcase</h3>
             <p>Este proyecto utiliza técnicas de visión por computadora con OpenCV y Haar Cascades para detectar rostros en tiempo real. Al capturar imágenes desde una cámara web, el sistema localiza las caras de las personas en el campo visual y puede activar acciones o mostrar información adicional, lo que es ideal para aplicaciones de seguridad o interacción humana.</p>
-            <a href="#">Ver proyecto</a>
+            <a href="https://github.com/emdraw/PythonFaceRecognition">Ver proyecto</a>
         </div>
         <div class="proyecto">
             <h3>Teclado Virtual</h3>
             <p>Desarrollé un teclado virtual utilizando Python y openCV, permitiendo a los usuarios interactuar con su computadora sin la necesidad de un teclado físico. El sistema permite ingresar texto y realizar tareas comunes a través de un diseño intuitivo, ideal para personas con discapacidades físicas o para dispositivos sin teclado físico.</p>
-            <a href="#">Ver proyecto</a>
+            <a href="https://github.com/emdraw/Virtual_Keybord">Ver proyecto</a>
         </div>
         <div class="proyecto">
             <h3>Página web</h3>
             <p>Creé una página web utilizando HTML, JavaScript, Python, PHP y CSS, centrada en ofrecer información clara y accesible. El proyecto incluye una estructura básica de navegación, secciones de contenido y un diseño atractivo y responsivo para adaptarse a diferentes dispositivos. Es ideal para una presentación personal o una pequeña empresa.</p>
-            <a href="#">Ver proyecto</a>
+            <a href="https://www.tecprottech.com/">Ver proyecto</a>
         </div>
         <div class="proyecto">
             <h3>chatbot con IA</h3>
             <p>Desarrollé un chatbot simple con Python utilizando la librería tensorflow y una base de datos en JSON para responder preguntas frecuentes en tiempo real. Este chatbot es capaz de mejorar sus respuestas a medida que interactúa con los usuarios. Es una solución ideal para soporte al cliente o para automatizar procesos de atención al usuario en sitios web.</p>
-            <a href="#">Ver proyecto</a>
+            <a href="https://github.com/emdraw/IA_chatbot">Ver proyecto</a>
         </div>
     </section>
 
